无投资角色时, 提醒申请投资人

--- a/app/views/investors/new.html.slim
+++ b/app/views/investors/new.html.slim
@@ -1,3 +1,5 @@
+- content_for(:title) do
+  | 申请投资人
 .row.top-blank
   .small-12.columns
     = render partial: "header", locals: { stage: :stage0 }
