--- a/app/assets/templates/directives/invest_button.html.slim
+++ b/app/assets/templates/directives/invest_button.html.slim
@@ -1,4 +1,4 @@
-.invest-button.ng-cloak
+.invest-button.ng-cloak ng-show='opened.is_investor'
   button ng-show='opened.status == "leader_needed"' 领投约谈
   button ng-show='opened.status == "leader_need_confirmed" && ! opened.leader.me' disabled=true 领投确认中
   button ng-show='opened.status == "leader_need_confirmed" && opened.leader.me' ng-click='open_syndicate()' 我是领投人, 马上确认
@@ -7,6 +7,9 @@
     | 我已投资了: 
     | {{ opened.syndicate.already_money }}
   button ng-show='opened.syndicate.can && opened.syndicate.already_money' ng-click='open_syndicate()' 追加投资
+.invest-button.ng-cloak ng-hide='opened.is_investor'
+  button disabled=true 申请投资人后才能投资
+  a.button href='/investors/new' 申请投资人资格
 
 script type='text/ng-template' id='syndicate.html'
   .row.invest-modal
