重构类别与城市创建的typeahead功能

--- a/app/assets/templates/project/basic.html.slim
+++ b/app/assets/templates/project/basic.html.slim
@@ -36,25 +36,15 @@ form.stage0.ng-cloak ng-submit='submit()'
   .row
     .small-10.medium-4.columns
       label for='industry' 所属行业
-      input id='industry' type='text' ng-model='project.industry' ng-class= '{ error: errors.industry, autocomplete: ! autocomplete_categories_is_empty() }' ng-keyup=' autocomplete_categories_search() '
-      .no-result.ng-cloak ng-show=' autocomplete_categories_error ' {{ autocomplete_categories_error }}
-      .autocomplete-wrapper-position
-        ul.autocomplete-wrapper.ng-cloak ng-hide=' autocomplete_categories_is_empty() '
-          li ng-repeat=' autocomplete_category in autocomplete_categories '
-            a ng-click=' add_category(autocomplete_category) '
-              |{{ autocomplete_category.name }}
+      input id='industry' type='text' ng-model='project.industry' typeahead="industry.name for industry in autocomplete_category($viewValue)" typeahead-loading="loadingIndustry" ng-class='{ error: errors.industry }' placeholder="请用中文输入"
+      i ng-show="loadingIndustry" class="glyphicon glyphicon-refresh"
 
       small.error.ng-cloak ng-show=' errors.industry' {{ errors.industry }}
   .row
     .small-10.medium-4.columns
       label for='city' 城市
-      input id='city' type='text' ng-model='project.city' ng-class= '{ error: errors.city, autocomplete: ! autocomplete_cities_is_empty() }' ng-keyup=' autocomplete_cities_search() '
-      .no-result.ng-cloak ng-show=' autocomplete_cities_error ' {{ autocomplete_cities_error }}
-      .autocomplete-wrapper-position
-        ul.autocomplete-wrapper.ng-cloak ng-hide=' autocomplete_cities_is_empty() '
-          li ng-repeat=' autocomplete_city in autocomplete_cities '
-            a ng-click=' add_city(autocomplete_city) '
-              |{{ autocomplete_city.name }}
+      input id='city' type='text' ng-model='project.city' ng-class= '{ error: errors.city}' typeahead="city.name for city in autocomplete_city($viewValue)" typeahead-loading="loadingCity" placeholder="请用中文输入"
+      i ng-show="loadingCity" class="glyphicon glyphicon-refresh"
       small.error.ng-cloak ng-show=' errors.city ' {{ errors.city }}
   .row
     .small-12.columns
