提醒邮件确认功能

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -19,6 +19,7 @@ html
           = render 'layouts/navigation'
           section.main-section
             .main-container
+              = render 'layouts/email_tip'
               = yield
             = render 'layouts/foot'
           a.exit-off-canvas
