支持 Head 与 描述的产品编辑功能

--- a/app/assets/stylesheets/components/project_head.css.scss
+++ b/app/assets/stylesheets/components/project_head.css.scss
@@ -4,5 +4,17 @@
     .name a {
       color: #FF2D2D;
     }
+    
+    .info {
+      i[class^=fi-] {
+        margin-right: 0.5rem;
+        margin-left: 0.5rem;
+
+        &:first-child {
+          margin-left: 0;
+        }
+
+      }
+    }
   }
 }
