--- a/app/views/projects/_head.html.slim
+++ b/app/views/projects/_head.html.slim
@@ -7,6 +7,10 @@
         = link_to @project.name, @project
       p.sub-name
         | #{@project.description}
-  - if defined?(edit) && edit
-    .edit
-      a href='#' 编辑
+      p.info
+        i.fi-home
+        span.city
+          | #{@project.cities_name}
+        i.fi-list-thumbnails
+        span.category
+          | #{@project.categories_name}
