--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -40,7 +40,7 @@ html
               li
                 = link_to '精品', refine_index_path
               li
-                = link_to '找工作', jobs_path
+                = link_to '参与创业', jobs_path
               li
                 = link_to '登录', new_user_session_path, class: 'login-button'
             ul.left
