--- a/app/views/layouts/_menu.html.slim
+++ b/app/views/layouts/_menu.html.slim
@@ -34,6 +34,6 @@ li
   = link_to jobs_path do
     - unless top
       i.fi-address-book
-    | 找工作
+    | 参与创业 
 li
   = text_field_tag 'search', nil, placeholder: '搜索项目, 人', class: 'search'
