--- a/app/assets/stylesheets/project_edit.css.scss
+++ b/app/assets/stylesheets/project_edit.css.scss
@@ -3,4 +3,16 @@
     border-bottom: 1px solid #ddd;
     position: relative;
   }
+
+  .image-edit {
+    list-style: none;
+    margin-left: 0;
+    li {
+      margin-bottom: 1rem;
+
+      .name {
+        margin: 0 1rem;
+      }
+    }
+  }
 }
