--- a/app/views/settings/profiles/show.html.slim
+++ b/app/views/settings/profiles/show.html.slim
@@ -1,11 +1,19 @@
 - content_for(:title) do
   | 个人设置
 
-.row.top-blank
+= render 'common/flash'
+
+.profile-edit.row.top-blank ng-controller='ProfileController'
   .small-12.medium-3.columns
     = render 'settings/sidebar'
   .small-12.medium-9.columns
-    = simple_form_for(@user) do |f|
-      = f.input :name
+    = simple_form_for(@user, url: settings_profile_path, method: :PUT) do |f|
+      = f.input :email, disabled: true
+      = f.input :name, required: false
+      img ng-src='{{ avatar }}' ng-init='avatar = "#{@user.avatar_url}" '
+      input id='avatar' type='file' ng-file-select='upload_avatar($files)'
+      small.error ng-show=' avatar_error '
+        | {{ avatar_error }}
+      input type='hidden' ng-model='user_id' ng-init='user_id = #{@user.id}'
       = f.input :description
       = f.button :submit, '提交', class: 'small'
