--- a/app/views/settings/profiles/show.html.slim
+++ b/app/views/settings/profiles/show.html.slim
@@ -10,6 +10,7 @@
     = simple_form_for(@user, url: settings_profile_path, method: :PUT) do |f|
       = f.input :email, disabled: true
       = f.input :name, required: false
+      = f.label :avatar
       img ng-src='{{ avatar }}' ng-init='avatar = "#{@user.avatar_url}" '
       input id='avatar' type='file' ng-file-select='upload_avatar($files)'
       small.error ng-show=' avatar_error '
