关注新项目的事件

--- a/app/assets/stylesheets/timeline.css.scss
+++ b/app/assets/stylesheets/timeline.css.scss
@@ -22,7 +22,7 @@
     }
 
     .head {
-      border-bottom: 1px solid #eee;
+      border-bottom: 1px solid #f1f1f1;
       padding-bottom: 1rem;
       margin-bottom: 1rem;
 
