--- a/app/views/home/_event.html.slim
+++ b/app/views/home/_event.html.slim
@@ -17,7 +17,7 @@
             .small-8.large-10.columns
               h6.title #{event.project.name}
               span.sub-title #{event.project.oneword}
-              p.team TODO 团队信息介绍
+              p.team.description #{event.project.description}
         .foot
           p 
             | 融资 30 万
