--- a/app/assets/stylesheets/timeline.css.scss
+++ b/app/assets/stylesheets/timeline.css.scss
@@ -2,18 +2,38 @@
 
 .timeline {
 
+  .no-content {
+    text-align: center;
+    margin-bottom: 1rem;
+  }
+
+  .event > .box {
+    border-top: 1px solid #f1f1f1 !important;
+    padding-top: 2rem !important;
+  }
+
   .box {
+
+    &:first-child {
+      border-top: none;
+      padding-top: 0;
+    }
+    border-top: 1px solid #f1f1f1;
+    padding-top: 2rem;
+
+    .type {
+      display: inline-block;
+      color: #999;
+    }
+
     @media #{$small-only} {
       .type {
         display: none;
       }
     }
 
-    .type {
-      color: #666;
-    }
-
     .content-wrapper {
+
       .created-at {
         float: right;
         color: #999;
@@ -22,9 +42,6 @@
     }
 
     .head {
-      border-bottom: 1px solid #f1f1f1;
-      padding-bottom: 1rem;
-      margin-bottom: 1rem;
 
       a {
         display: inline-block;
@@ -37,7 +54,6 @@
     }
 
     .content {
-      border-bottom: 1px solid #eee;
       padding-bottom: 1rem;
       margin-bottom: 1rem;
       .title {
@@ -56,9 +72,7 @@
 
     .foot {
       color: #666;
-      border-bottom: 1px solid #ddd;
       padding-bottom: 1rem;
-      margin-bottom: 1rem;
       .detail {
         margin-left: 0.5rem;
         font-size: 90%;
