--- a/app/views/home/_event.html.slim
+++ b/app/views/home/_event.html.slim
@@ -11,11 +11,6 @@
           = link_to event.project.name, project_path(event.project)
           span.created-at #{time_ago_in_words(event.created_at)}前
         = render partial: 'home/event_project_content', locals: { event: event }
-        .foot
-          p 
-            | 融资 30 万
-            span.detail
-              = link_to '更多...', project_path(event.project)
 - if event.action == Event::USER_FUN
   /! user fun
   .box
@@ -54,3 +49,85 @@
           = link_to event.project.name, project_path(event.project)
           span.created-at #{time_ago_in_words(event.created_at)}前
         = render partial: 'home/event_project_content', locals: { event: event }
+- if event.action == Event::PROJECT_INVEST
+  /! project invest
+  .box
+    .row.collapse
+      .small-0.medium-1.columns.type
+        span.fi-dollar
+      .small-12.medium-11.columns.content-wrapper
+        .head
+          = link_to event.user.name, user_path(event.user)
+          | 投资了
+          = link_to number_with_delimiter(event.data[:money]), project_path(event.project)
+          | 给项目
+          = link_to event.project.name, project_path(event.project)
+          span.created-at #{time_ago_in_words(event.created_at)}前
+- if event.action == Event::PROJECT_INVEST_ADD
+  /! project invest add
+  .box
+    .row.collapse
+      .small-0.medium-1.columns.type
+        span.fi-dollar
+      .small-12.medium-11.columns.content-wrapper
+        .head
+          = link_to event.user.name, user_path(event.user)
+          | 追加投资给项目
+          = link_to event.project.name, project_path(event.project)
+          | , 目前投资额:
+          = link_to number_with_delimiter(event.data[:money]), project_path(event.project)
+          span.created-at #{time_ago_in_words(event.created_at)}前
+- if event.action == Event::MONEY_REQUIRE_CREATE
+  /! money require create
+  .box
+    .row.collapse
+      .small-0.medium-1.columns.type
+        span.fi-dollar
+      .small-12.medium-11.columns.content-wrapper
+        .head
+          span
+            | 项目
+          = link_to event.project.name, project_path(event.project)
+          | 发起了融资需求
+          span.created-at #{time_ago_in_words(event.created_at)}前
+        = render partial: 'home/event_project_content', locals: { event: event }
+        .foot
+          p 
+            | 计划融资 #{number_with_delimiter(event.target.money)}
+            span.detail
+              = link_to '更多...', project_path(event.project)
+- if event.action == Event::MONEY_REQUIRE_LEADER
+  /! leader
+  .box
+    .row.collapse
+      .small-0.medium-1.columns.type
+        span.fi-dollar
+      .small-12.medium-11.columns.content-wrapper
+        .head
+          span
+            | 项目
+          = link_to event.project.name, project_path(event.project)
+          | 找到了领投人
+          = link_to event.target.leader.name, user_path(event.target.leader)
+          span.created-at #{time_ago_in_words(event.created_at)}前
+        = render partial: 'home/event_project_content', locals: { event: event }
+- if event.action == Event::MONEY_REQUIRE_OPENED
+  /! money require opened
+  .box
+    .row.collapse
+      .small-0.medium-1.columns.type
+        span.fi-dollar
+      .small-12.medium-11.columns.content-wrapper
+        .head
+          span
+            | 项目
+          = link_to event.project.name, project_path(event.project)
+          | 正式开始融资
+          span.created-at #{time_ago_in_words(event.created_at)}前
+        = render partial: 'home/event_project_content', locals: { event: event }
+        .foot
+          span
+            | 计划融资 #{number_with_delimiter(event.target.money)}, 
+            | 领投人
+          = link_to event.target.leader.name, user_path(event.target.leader)
+          = link_to '更多...', project_path(event.project)
