--- a/app/views/layouts/_user_dropdown.html.slim
+++ b/app/views/layouts/_user_dropdown.html.slim
@@ -11,8 +11,13 @@
     li
       ul.about-me
         h6.title 我
-        li
-          = link_to '申请投资人', new_investor_path
+        - if ! current_user.investor.present?
+          li
+            = link_to '申请投资人', new_investor_path
+        - elsif current_user.has_role?(:investor)
+        - else
+          li
+            = link_to '查看投资人进度', new_investor_path
         li
           = link_to '我的主页', user_path(current_user)
         li
