所有项目展示的翻页功能

--- a/app/assets/stylesheets/explore_all.css.scss
+++ b/app/assets/stylesheets/explore_all.css.scss
@@ -4,9 +4,11 @@
 
   .projects {
     border-top: 1px solid #ddd;
-    .load-more {
+
+    .paginate {
       margin-top: 2rem;
     }
+
   }
 
   .project {
