项目搜索功能

--- a/app/assets/stylesheets/explore_all.css.scss
+++ b/app/assets/stylesheets/explore_all.css.scss
@@ -2,6 +2,11 @@
   padding-top: 1.5rem;
   background-color: white;
 
+  .no-content {
+    margin-top: 1rem;
+    color: #666;
+  }
+
   .projects {
     border-top: 1px solid #ddd;
 
