--- a/app/views/explore/all.html.slim
+++ b/app/views/explore/all.html.slim
@@ -8,11 +8,12 @@
         = link_to explore_index_path do
           | 回到广场
           span <
-      .row.search.collapse ng-controller='ProjectSearchController'
-        .small-9.medium-6.large-4.columns
-          input type='text' id='search' placeholder='项目名称' ng-model='q' ng-init='q="#{params[:q]}"'
-        .small-3.medium-1.large-1.end.columns
-          a.button.postfix ng-click='search()' 搜索
+      form ng-submit='search()' ng-controller='ProjectSearchController'
+        .row.search.collapse
+          .small-9.medium-6.large-4.columns
+            input type='text' id='search' placeholder='项目名称' ng-model='q' ng-init='q="#{params[:q]}"'
+          .small-3.medium-1.large-1.end.columns
+            a.button.postfix ng-click='search()' 搜索
 
       .small-12.large-10.columns.projects
         - if @projects.blank?
