--- a/app/assets/stylesheets/team.css.scss
+++ b/app/assets/stylesheets/team.css.scss
@@ -21,3 +21,31 @@
     }
   }
 }
+
+.team-content {
+  #owner-avatar {
+    margin-top: 0.5rem;
+  }
+  .edit {
+    position: absolute;
+    right: 1rem;
+    top: 0.5rem;
+  }
+
+  .cancel {
+    margin-left: 0.5rem;
+  }
+
+  .team-story-wrapper {
+    color: #888;
+    min-height: 6rem;
+  }
+
+  .members .person .name {
+    padding-bottom: 0;
+  }
+  
+  .invite-tips {
+    color: #888;
+  }
+}
