--- a/app/assets/templates/project/team.html.slim
+++ b/app/assets/templates/project/team.html.slim
@@ -6,7 +6,7 @@
       a.active href='javascript:void(0)' 2. 团队信息
     li
       a href='javascript:void(0)' 3. 创业需求
-.row.stage1
+.row.stage1.team-content
   .small-12.columns
     .owner
       .person.ng-cloak ng-init= 'owner_edited = false' 
