--- a/app/views/projects/show.html.slim
+++ b/app/views/projects/show.html.slim
@@ -35,19 +35,21 @@
         .team
           h3.title 团队情况
           .row
-            - 3.times do 
-              .small-12.large-6.columns
-                .person
-                  .row
-                    .small-4.large-3.columns
-                      = image_tag 'm/u1.png'
-                    .small-8.large-9.columns
-                      .name 
-                        = link_to '李亚飞', user_path(1)
-                      .job-title CTO
-                      .description 我毕业于清华大学, 创建过xx项目, xx项目, 属于二次创业.
-          .small-12.columns.more-info
-            = link_to '查看更多团队故事...', team_project_path(@project)
+            .small-12.columns
+              ul.small-block-grid-1.medium-block-grid-2
+                - @project.members.each do |m|
+                  li
+                    .person
+                      .row
+                        .small-4.medium-3.columns
+                          = image_tag m.user.avatar_url
+                        .small-8.medium-9.columns
+                          .name 
+                            = link_to m.user.name, user_path(m.user)
+                          .job-title #{m.title}
+                          .description #{m.description}
+              .more-info
+                = link_to '查看更多团队故事...', team_project_path(@project)
         .job
           h3.title 招人情况
           h4 正在招人
