--- a/app/views/projects/team.html.slim
+++ b/app/views/projects/team.html.slim
@@ -9,33 +9,28 @@
       .owner
         .person
           .row
-            .small-4.large-3.columns
-              = image_tag 'm/u1.png'
+            .small-4.medium-3.columns
+              = image_tag @owner.avatar_url
             .small-8.large-9.columns
               .name 
-                = link_to '李亚飞( Owner )', user_path(1)
-              .job-title CTO
-              .description 我毕业于清华大学, 创建过xx项目, xx项目, 属于二次创业.
+                = link_to @owner.name, user_path(@owner)
+              .job-title #{@owner_member.title}
+              .description #{@owner_member.description}
       .story
         h3.title 我们的故事
-        p 我们是一帮好人
-        p 1974.02--1978.10 北京市运输公司汽车修理厂工人
-        p 1978.10—1982.08 中国人民大学中共党史系中共党史专业学生
-        p 1982.08—1983.09 中央教育行政学院教员
-        p 1983.09—1986.07 中国人民大学中共党史系硕士研究生
-        p 1986.07—1989.03 北京市委研究室干部、副处级调研员
-        p 1989.03—1991.04 国务院台办二组副处长
+        .team-story.description
+          | #{@project.team_story}
       .members
         h3.title 我们的成员
-        ul.small-block-grid-1.large-block-grid-2
-          - 6.times do
+        ul.small-block-grid-1.medium-block-grid-2
+          - @members.each do |m|
             li
               .person
                 .row
                   .small-4.large-3.columns
-                    = image_tag 'm/u1.png'
+                    = image_tag m.user.avatar_url
                   .small-8.large-9.columns
                     .name 
-                      = link_to '李亚飞', user_path(1)
-                    .job-title CTO
-                    .description 我毕业于清华大学, 创建过xx项目, xx项目, 属于二次创业.
+                      = link_to m.user.name, user_path(m.user)
+                    .job-title #{m.title}
+                    .description #{m.description}
