--- a/app/views/common/_project_list_item.html.slim
+++ b/app/views/common/_project_list_item.html.slim
@@ -1,4 +1,4 @@
-.row.project
+.row.project-list-item
   .small-3.medium-2.columns
     = link_to project_path(project) do
       - image_tag project.logo.image_url
