--- a/app/views/common/_project_list_item.html.slim
+++ b/app/views/common/_project_list_item.html.slim
@@ -11,3 +11,10 @@
     .team
       p.description
         | #{project.description}
+    p.info
+      i.fi-home
+      span.city
+        | #{project.cities_name}
+      i.fi-list-thumbnails
+      span.category
+        | #{project.categories_name}
