--- a/app/views/money_requires/admin.html.slim
+++ b/app/views/money_requires/admin.html.slim
@@ -99,7 +99,11 @@
     .small-12.large-10.large-centered.columns
       .money_require
         moneyrequire require='money_require' title='"目前融资进度"'
-      h4 融资事件
+      .invest
+        h4.title 融资事件
+      .timeline.simple
+        - @project.events.default_order.each do |event|
+          = render partial: 'home/event', locals: { event: event }
   .row.ng-cloak ng-show='money_require.status == "closed"'
     .small-12.large-10.large-centered.columns
       moneyrequire require='money_require' title='"融资已完成"'
