--- a/app/views/projects/invest.html.slim
+++ b/app/views/projects/invest.html.slim
@@ -31,14 +31,15 @@
           li ng-repeat="investment in investments"
             .row.invest-leader
               .small-4.medium-3.columns
-                = image_tag 'm/u2.jpg'
+                img ng-src='{{ investment.user.avatar }}'
               .small-8.medium-9.columns
                 .name 
                   a ng-href="/users/{{ investment.user.id }}"
-                    | {{ investment.user.name }}( 跟投人 )
+                    | {{ investment.user.name }}
                 .money
                   | ¥ {{ investment.money }}
                 .time
+                  | 投资于 
                   | {{ investment.created_at }}
                 .description
                   | {{ investment.user.description }}
