--- a/app/views/projects/show.html.slim
+++ b/app/views/projects/show.html.slim
@@ -53,31 +53,31 @@
         .job
           h3.title 招人情况
           h4 正在招人
-          .row
-            - 3.times do 
-              .small-12.large-6.columns
+          ul.small-block-grid-1.large-block-grid-2
+            - @project.person_requires.each do |person_require|
+              li
                 .job-box
-                  table
-                    tr
-                      td 职位
-                      td 软件开发工程师
-                    tr
-                      td 负责内容
-                      td 开发软件
-                    tr
-                      td 报酬
-                      td 月薪: 20k - 30k
-                    tr
-                      td 
-                      td 期权: 30%
-                    tr
-                      td 
-                      td 股权: 1%
-                    tr
-                      td 可选程
-                      td 是
-                    tr
-                      td 可兼职
-                      td 是
-                  .job-interest
-                    button.small 我感兴趣
+                    table
+                      tr
+                        td 职位
+                        td #{person_require.title}
+                      tr
+                        td 负责内容
+                        td.description #{person_require.description}
+                      tr
+                        td 报酬
+                        td 月薪: ¥ #{person_require.pay}
+                      tr
+                        td 
+                        td 期权: #{person_require.option}%
+                      tr
+                        td 
+                        td 股权: #{person_require.stock}%
+                      tr
+                        td 可选程
+                        td #{human_boolean(person_require.remote)}
+                      tr
+                        td 可兼职
+                        td #{human_boolean(person_require.part)}
+                    .job-interest
+                      button.small 我感兴趣
