工作管理功能

--- a/app/views/projects/edit.html.slim
+++ b/app/views/projects/edit.html.slim
@@ -235,9 +235,12 @@
         .small-12.columns
           .data-content
             h3.title 其他数据
+            p.no-content 暂无数据
       .invest-content ng-controller='MoneyRequireController' ng-init= 'init(#{@project.id}, {})'
-        .edit
-          = link_to '管理', admin_money_requires_path( project_id: @project.id )
+        .row
+          .small-12.columns
+            .edit
+              = link_to '管理', admin_money_requires_path( project_id: @project.id )
         h3.title 投资情况
         .money-require ng-show='opened'
           moneyrequire require='opened' title='"当前轮次"'
@@ -254,3 +257,11 @@
       .row
         .small-12.columns 
           h3.title 招人需求
+          .edit
+            = link_to '管理', admin_project_person_requires_path(project_id: @project.id)
+          - person_requires = @project.person_requires.default_order.opened
+          - if person_requires.blank?
+            p.jobs.no-content 暂无需求
+          - else
+            ul.small-block-grid-1.large-block-grid-2
+              = render partial: 'person_require', collection: person_requires
