创建招人需求时的事件显示

--- a/app/assets/stylesheets/timeline.css.scss
+++ b/app/assets/stylesheets/timeline.css.scss
@@ -53,6 +53,13 @@
 
     }
 
+    .head2 {
+      font-size: 90%;
+      color: #444;
+      margin-bottom: 1.5rem;
+      margin-top: -1rem;
+    }
+
     .content {
       padding-bottom: 1rem;
       margin-bottom: 1rem;
