--- a/app/views/home/_event.html.slim
+++ b/app/views/home/_event.html.slim
@@ -131,3 +131,20 @@
             | 领投人
           = link_to event.target.leader.name, user_path(event.target.leader)
           = link_to '更多...', project_path(event.project)
+- if event.action == Event::PERSON_REQUIRE_CREATE
+  /! person_require create  
+  .box
+    .row.collapse
+      .small-0.medium-1.columns.type
+        span.fi-torso-business
+      .small-12.medium-11.columns.content-wrapper
+        .head
+          span
+            | 项目
+          = link_to event.project.name, project_path(event.project)
+          | 开始招聘
+          = link_to event.target.title, project_path(event.project)
+          span.created-at #{time_ago_in_words(event.created_at)}前
+        .head2
+          | 月薪 #{number_to_currency(event.target.pay)} - 期权 #{event.target.option}% - 股票 #{event.target.stock}% #{ ' - 可远程' if event.target.remote }#{ ' - 可兼职' if event.target.part }
+        = render partial: 'home/event_project_content', locals: { event: event }
