--- a/app/views/projects/edit.html.slim
+++ b/app/views/projects/edit.html.slim
@@ -254,14 +254,4 @@
           .small-12.columns
             h4.title 历史投资
             p.no-invest-content 无历史投资记录
-      .row
-        .small-12.columns 
-          h3.title 招人需求
-          .edit
-            = link_to '管理', admin_project_person_requires_path(project_id: @project.id)
-          - person_requires = @project.person_requires.default_order.opened
-          - if person_requires.blank?
-            p.jobs.no-content 暂无需求
-          - else
-            ul.small-block-grid-1.large-block-grid-2
-              = render partial: 'person_require', collection: person_requires
+      = render 'job'
