添加工作投递的管理功能

--- a/app/views/person_requires/admin.html.slim
+++ b/app/views/person_requires/admin.html.slim
@@ -21,6 +21,7 @@
           th 要求
           th 发布时间
           th 状态
+          th 感兴趣的人
           th 操作
       tbody
         - @person_requires.each do |person_require|
@@ -29,6 +30,9 @@
             td.description #{person_require.description}
             td #{format_date(person_require.created_at)}
             td #{human_person_require_status(person_require)}
+            td
+              = link_to person_require.users.size, interest_users_path(person_require_id: person_require.id)
+              |   人感兴趣
             td
               = link_to '编辑', edit_project_person_require_path(@project, person_require)
               - if person_require.opened?
